--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,4 @@
 local.properties
 .DS_Store
 
-# Ignore compile artifacts
-harmonyApp/entry/libs/arm64-v8a/libkn.so
-harmonyApp/entry/src/main/cpp/include/libkn_api.h
-composeApp/build
+breakpoint/build
