--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,13 @@ org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 
 # Kotlin settings
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.incremental=true
 
 # Android settings
 android.useAndroidX=true
