修改依赖compose-multiplatform和compose-multiplatform-core的依赖

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.2"
 androidx-activityCompose = "1.10.1"
+# 这里填写 ovCompose-multiplatform插件的版本号，这里使用腾讯的版本即可
 compose-multiplatform = "1.6.1-KBA-007"
 # 这里填写 ovCompose-multiplatform-core/libraryversions.toml 中 COMPOSE = "xxx" 的版本号，或者是在环境变量中配置的"COMPOSE_CUSTOM_VERSION"值
 compose-multiplatform-core = "1.6.1-SONG-001"
